sass/layout/_functioning.scss
//FONCTIONNEMENT (PAGE PRINCIPALE)
.functioning{
    &-insert{
        padding-bottom: 50px;
    }
    &__title{
        font-weight: $weight-title;
        font-size: $size-title;
        padding:50px 0 10px 20px;
        margin:0;
    }
    &-insert__link{
        text-decoration: none;
        display: flex;
        align-items: center;
        background: $color-background;
        border-radius: 20px;
        margin: 10px 20px 20px 25px;
        box-shadow: 2px 2px 7px $soft-grey;
        &:hover{
            background: lighten($violet, 35%);
            transition: .5s linear;
            .functioning-insert-ball__icon{
                color: $violet;
                transition: .5s linear;
            }
        }
    }
    &-insert-ball{
        position: relative;
        margin-left:-10px;
        height: 27px;
        width: 27px;
        background: $violet;
        border-radius: 20px;
    }
    &-insert-ball__icon{
        width:15px;
        height:15px;
        color: $dark-grey;
        margin-left: 20px;
    }
    &-insert-ball__numb{
        margin:4px 0 0 9px;
        font-weight: $weight-title;
        color: white;
    }
    &-insert__text{
        padding: 27px;
        margin: 0;
    }
}

// BREAKPOINT DESKTOP FONCTIONNEMENT
@media screen and (min-width: 1024px) {
    .functioning{
        max-width: 1024px;
        margin: auto;
    }
    .functioning-insert{
        display: flex;
        justify-content: space-between;
    }
}

